--- a/css/styles.css
+++ b/css/styles.css
@@ -660,14 +660,14 @@ progress {
 .demo-pic {
   height: 250px;
   width: 400px;
-  border: 2px solid rgb(168, 165, 165);
+  border: 3px double rgb(202, 199, 199);
   margin-left: 10px;
-  border-radius: 15px;
-  padding 5px;
+  border-radius: 20px;
+  padding: 5px;
 }
 
 .line {
-  border: 1px solid rgb(171, 171, 171);
+  border: 1px solid rgb(210, 208, 208);
   width: 100%;
   height: 1px;
 }
