--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #fd1374;
+  --bs-primary: #f07167;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -41,7 +41,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 253, 19, 116;
+  --bs-primary-rgb: 240, 113, 103;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -111,6 +111,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 
 h1, .h1 {
   font-size: calc(1.725rem + 5.7vw);
+  filter: drop-shadow(-4px 7px 7px rgba(0, 0, 0, 0.1));
 }
 @media (min-width: 1200px) {
   h1, .h1 {
@@ -174,11 +175,6 @@ address {
 }
 
 ol,
-ul {
-  padding-left: 2rem;
-}
-
-ol,
 ul,
 dl {
   margin-top: 0;
@@ -236,7 +232,7 @@ sup {
 }
 
 a {
-  color: #fd1374;
+  color: #F07167;
   text-decoration: underline;
 }
 a:hover {
@@ -572,6 +568,7 @@ progress {
 
 .list-inline-item {
   display: inline-block;
+  padding: 5px;
 }
 .list-inline-item:not(:last-child) {
   margin-right: 0.5rem;
@@ -635,7 +632,7 @@ progress {
 .container-lg,
 .container-md,
 .container-sm {
-  width: 100%;
+  min-width: 430px;
   padding-right: var(--bs-gutter-x, 0.75rem);
   padding-left: var(--bs-gutter-x, 0.75rem);
   margin-right: auto;
@@ -647,6 +644,7 @@ progress {
   margin: auto;
   justify-content: center;
   height: 120px;
+  filter: drop-shadow(-4px 7px 7px rgba(0, 0, 0, 0.32));
 }
 
 .proj {
@@ -657,13 +655,28 @@ progress {
   vertical-align: auto;
 }
 
+@media only screen and (max-width: 600px) {
+  .proj {
+    flex-direction: column;
+  }
+}
+
+.proj-deets {
+  margin: 20px;
+}
+
 .demo-pic {
   height: 250px;
   width: 400px;
-  border: 3px double rgb(202, 199, 199);
-  margin-left: 10px;
-  border-radius: 20px;
-  padding: 5px;
+  filter: drop-shadow(-4px 10px 7px rgba(0, 0, 0, 0.32));
+  margin: 10px 0;
+  border-radius: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+  .demo-pic {
+    margin-top: 20px;
+  }
 }
 
 .line {
@@ -11382,6 +11395,7 @@ p.lead {
     max-width: 10rem;
     max-height: 10rem;
     border: 0.5rem solid rgba(255, 255, 255, 0.2);
+    filter: drop-shadow(-4px 7px 7px rgba(0, 0, 0, 0.32));
   }
   #sideNav .navbar-collapse {
     display: flex;
@@ -11422,6 +11436,10 @@ p.lead {
 
 .dev-icons {
   font-size: 3rem;
+  filter: drop-shadow(-4px 7px 7px #BCD8E4);
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 section.resume-section {
